[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprits/Enemigos/Old_Guardian_walk.png" type="Texture" id=1]
[ext_resource path="res://Golem_Enemigo.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Ataque_Enemigo"
length = 10.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Enemigo_Death"
length = 9.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 26, 27, 27 ]
}

[sub_resource type="Animation" id=3]
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 103.664, 161.419 )

[node name="Golem_Enemigo" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5.13371, 5.13371 )
texture = ExtResource( 1 )
flip_h = true
vframes = 28
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Enemy_Caminando"
playback_speed = 9.0
anims/Ataque_Enemigo = SubResource( 1 )
anims/Enemigo_Death = SubResource( 2 )
anims/Enemy_Caminando = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -11.9345, 2.69956 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="Golem_derecha" type="RayCast2D" parent="."]
position = Vector2( 95.0413, 101.133 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 100 )

[node name="Golem_Izquierda" type="RayCast2D" parent="."]
position = Vector2( -118.864, 98.908 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 100 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
